Fixed HamburgIcon gap

--- a/assets/css/gammaray.css
+++ b/assets/css/gammaray.css
@@ -129,7 +129,6 @@ button, a {
     display: inline-block;
     padding: 10px 20px;
     border: 3px solid black;
-    margin: 10px;
     font-size: 16px;
     text-decoration: none;
     cursor: pointer;
@@ -183,3 +182,7 @@ button, a {
 #extra-content:target {
     display: block;
 } 
+
+.nextHamburg {
+    margin-right: 40px;
+}
